# okroshka

./: .gitmodules  Cargo.toml  build.rs
src/: main.rs
src/okroshka/: mod.rs
src/okroshka/ir/: assembly.rs  block.rs  core.rs  data.rs  datatype.rs  function.rs  instr.rs  mod.rs  module.rs  string_literal.rs  symbol.rs
src/okroshka/loader/: ir.rs  mod.rs
