[package]
name = "okroshka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.23.0", features = [ "serialize" ] }

[build-dependencies]
serde = { version = "*", features = ["derive"] }
quick-xml = { version = "*", features = [ "serialize" ] }
